--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 clap = { version = "4.4.8", features = ["derive"] }
 flate2 = "1.0.28"
 sha2 = "0.10.8"
+byteorder = "1.4"
+bitflags = "2.4.1"
